# 202504-CWTS-Presentation

./: README.md
affiliation-parser/: Cargo.toml  README.md
affiliation-parser/sample_configs/: crossref_profile.json  datacite_profile.json  openalex_profile.json  run_config.yaml
affiliation-parser/sample_outputs/: processes.csv  sources.csv  values.csv
affiliation-parser/src/: main.rs
duckdb-affiliation-ingest/: README.md  ingest.sql
duckdb-affiliation-ingest/create_destroy_db/: drop_tables.sql  ingest.sql
duckdb-affiliation-ingest/in_openalex_not_in_crossref/: in_openalex_not_in_crossref.sql
duckdb-affiliation-ingest/in_openalex_not_in_crossref/sample_output/: in_openalex_not_in_crossref.csv
duckdb-affiliation-ingest/sample_ingest_files/: process_record_relationships.csv  records.csv  source_process_relationships.csv
