[package]
name = "affiliation-parsing"
version = "1.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
crossbeam-channel = "0.5"
csv = "1.3"
dashmap = "5.5"
flate2 = "1.0"
glob = "0.3"
hex = "0.4"
indicatif = "0.17"
log = "0.4"
num_cpus = "1.16"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
simple_logger = "5.0"
time = { version = "0.3", features = ["macros"] }
uuid = { version = "1.8", features = ["v4", "serde"] }